# smart_rahfan

./: .gitignore  init_project.sh
examples/: .gitignore
examples/rockship_mipi_camera_udp_stream/: CMakeLists.txt  catch_udp_mjpeg_stream.py  main.c  toolchain.cmake
rknn/: README.md
rknn/applications/first_demo/: CMakeLists.txt  README.md  bringup.md  params.conf
rknn/applications/first_demo/include/: MainService.h
rknn/applications/first_demo/include/core/: CameraCapture.h  DroneControler.h  TrackerService.h  WebServer.h
rknn/applications/first_demo/include/utils/: DroneControlerHal.hpp  NNOperationsCpu.hpp  StatusObject.hpp
rknn/applications/first_demo/src/: MainService.cpp  main.cpp
rknn/applications/first_demo/src/core/: CameraCapture.cpp  DroneControler.cpp  TrackerService.cpp  WebServer.cpp
rknn/applications/first_demo/tester/: depthwise_benchmark  depthwise_benchmark.cpp  rknn_tester.cpp
rknn/applications/first_demo/tester/matmul_corr_model_test/: .gitignore  convert_model.py  model_test.cpp  prepare_test_data.py  run_all.sh
rknn/applications/first_demo/tester/matmul_dynamic_test/: convert_matmul.py  generate_matmul_model.py  matmul_test.cpp  run_all.sh
rknn/converter/: convert.py  prepare_calibration.py
rknn/converter/configs/: tracker_config.yaml  tracker_keras_config.yaml  tracker_keras_config_corr.yaml  tracker_keras_config_mha.yaml  tracker_tflite_config.yaml  tracker_tflite_decoder_config.yaml  tracker_tflite_frame_config.yaml  tracker_tflite_frame_no_quality_config.yaml  tracker_tflite_search_backbone_config.yaml  tracker_tflite_template_config.yaml
rknn/docker/: Dockerfile  build.sh  run.sh
rknn/docs/: radxa_npu_deep_dive.md
training/: .gitignore  README.md  test_generator.py  test_tracker.py
training/docker/: Dockerfile  build.sh  run.sh
training/docker_tf25/: Dockerfile  run.sh
training/tracker/: README3.md  __init__.py  convert_to_tflite.py  dataset_generator_from_video.py  dataset_visual_test.py  keras_visualization_test.py  keras_visualization_test2.py  keras_visualization_test3.py  model.py  run_examples.txt  run_tracker3_training.sh  tracker2_dataset_visual_test.py  tracker_model.py  tracker_model2.py  tracker_model3.py
training/tracker/android/: settings.gradle.kts
training/tracker/android/app/: build.gradle.kts
training/tracker/android/gradle/: libs.versions.toml
training/tracker/archive/: README_tracker_ver4.md  README_v1.md  README_v2.md
training/tracker/dataset_generation_project/: dataset_generator_from_video.py  pipeline_config.json  run_generate.sh  run_visualize.sh
training/tracker/dataset_generation_project/docker/: build.sh  run_ubuntu.sh
training/tracker/tracker_ver3/: README.md  README3.md  __init__.py  keras_visualization_test.py  keras_visualization_test3.py  run_examples.txt  run_tracker_training.sh  tracker_model.py
training/tracker/tracker_ver3/android/app/: build.gradle.kts
training/tracker/tracker_ver3/dataset_generation_project/: dataset_generator_from_video.py  run_visualize.sh
training/tracker/tracker_ver3_lite/: README.md  __init__.py  keras_visualization_test.py  run_examples.txt  run_tracker_training.sh  tracker_model.py
training/tracker/tracker_ver3_lite/android/: settings.gradle.kts
training/tracker/tracker_ver3_lite/dataset_generation_project/: dataset_generator_from_video.py  pipeline_config.json  run_generate.sh  run_visualize.sh
training/tracker/tracker_ver4/: README.md  convert_to_tflite_static.py  keras_visualization_test.py  model.conf  run_pxl_tracker_training.sh  run_qat_optimization.sh  run_tracker_training.sh  run_tracker_training_coords.sh  tracker_model.py  tracker_model_coords.py  tracker_ver4_pxl.py  trained_model_visual_test.py
training/tracker/tracker_ver4/android/: settings.gradle.kts
training/tracker/tracker_ver4/dataset_generator/: ISAAC_SIM_DATASET_GENERATION.md  carla_dataset_generator.py  carla_visualization_manual_tester.py  create_batched_dataset.py  dataset_compiler.py  dataset_generator.py  dataset_visual_test.py  isaac_dataset_generator.py  pipeline_config.json  run_isaac_datagenerator.sh  video_dataset_generator.py  video_dataset_generator_v2.py  visualization_manual_tester.py
training/tracker/tracker_ver4/utils/: convert_to_tflite_static.py  quantization_optimization.py  trained_model_visual_test.py
training/tracker/tracker_ver5/: README.md  model.conf  run_qat_optimization.sh  run_subgraph_export.sh  run_tracker_training_heatmap.sh  run_tracker_training_heatmap_matmul_corr.sh  run_tracker_training_quality.sh  run_tracker_training_quality_matmul_corr.sh  tracker_model.py  tracker_model_matmul_corr.py  useful.txt
training/tracker/tracker_ver5/dataset_generator/: carla_dataset_generator.py  carla_visualization_manual_tester.py  dataset_compiler.py  pipeline_config.json
training/tracker/tracker_ver5/documentation/: iteration_selection_rule.md
training/tracker/tracker_ver5/utils/: check_keras_predictions.py  check_teacher.py  check_tflite.py  check_vars.py  convert_to_tflite_static.py  quantization_optimization.py  trained_model_visual_test.py
training/tracker/tracker_ver_pxl/: keras_visualization_test.py  model.conf  run_tracker_training.sh  tracker_model.py
training/tracker/tracker_ver_pxl/dataset_generator/: create_batched_dataset.py  dataset_compiler.py  pipeline_config.json
training/tracker/utils/: __init__.py  convert_to_tflite.py  convert_to_tflite_static.py  generate_image_list.py
yocto/docker/: Dockerfile  build.sh  run.sh
yocto/meta-ksg/: README  bringup.txt  flash-sd.sh
yocto/meta-ksg/conf/: layer.conf
yocto/meta-ksg/recipes-bsp/rockchip-librga/: rockchip-librga.bb
yocto/meta-ksg/recipes-bsp/u-boot/: u-boot_%.bbappend
yocto/meta-ksg/recipes-connectivity/openssh/: openssh_%.bbappend
yocto/meta-ksg/recipes-connectivity/static-ip/: static-ip_1.0.bb
yocto/meta-ksg/recipes-core/images/: core-image-minimal.bbappend
yocto/meta-ksg/recipes-core/rknpu2/: rknpu2_2.0.0.bb
yocto/meta-ksg/recipes-kernel/linux/: linux-rockchip_5.10.bb  linux-torvalds-next_git.bbappend
(+86 files in other folders)
